timelines fixed css, truncation of segments colors annotation

--- a/src/app/plugins/annotation/annotation-plugin.component.scss
+++ b/src/app/plugins/annotation/annotation-plugin.component.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     overflow: hidden;
     z-index: 999;
-    position: absolute;
+    position: relative;
     width:100%;
   }
 
